# vfs

./: Cargo.toml  flake.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: automerge.yml  build.yml  check.yml  update.yml
dir/: Cargo.toml
dir/src/: lib.rs
file/: Cargo.toml
file/src/: lib.rs
keyfs/: Cargo.toml
keyfs/src/: generate.rs  lib.rs  share.rs  sign.rs  trust.rs  verify.rs
ledger/: Cargo.toml
ledger/src/: lib.rs
memory/: Cargo.toml
memory/src/: lib.rs
src/: id.rs  lib.rs
src/tmpfs/: builder.rs  inode.rs  link.rs  mod.rs
src/tmpfs/open/: dir.rs  mod.rs
tests/: mod.rs  wash.rs
tests/util/: mod.rs  noop.rs  surround.rs  tee.rs  wash.rs
tmpfs/: Cargo.toml
tmpfs/src/: builder.rs  dir.rs  file.rs  inode.rs  lib.rs  link.rs  node.rs
tmpfs/src/open/: dir.rs  file.rs  mod.rs
