[package]
name = "wasmtime-vfs-dir"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime-vfs-ledger = { path = "../ledger" }
wasmtime-vfs-memory = { path = "../memory" }
wasmtime-vfs-file = { path = "../file" }
async-trait = "0.1.51"
wasi-common = "2.0.0"

[dev-dependencies]
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt"] }
