[package]
name = "wasmtime-vfs-dir"
version = "0.1.1"
edition = "2021"
description = "In-memory WASI directory"
authors = ["The Enarx Project Developers"]
homepage = "https://enarx.dev/"
repository = "https://github.com/enarx/vfs"
license = "Apache-2.0"
keywords = ["vfs"]
categories = ["filesystem"]

[dependencies]
async-trait = { workspace = true }
wasi-common = { workspace = true }
wasmtime-vfs-ledger = { workspace = true }
wasmtime-vfs-memory = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
wasmtime-vfs-file = { workspace = true }
