[package]
name = "wasmtime-vfs-file"
version = "0.1.0"
edition = "2021"
description = "In-memory WASI file"
authors = ["The Enarx Project Developers"]
homepage = "https://enarx.dev/"
repository = "https://github.com/enarx/vfs"
license = "Apache-2.0"
keywords = ["vfs"]
categories = ["filesystem"]

[dependencies]
async-trait = { workspace = true }
wasi-common = { workspace = true }
wasmtime-vfs-ledger = { workspace = true }
wasmtime-vfs-memory = { workspace = true }
