[package]
name = "wasmtime-vfs-keyfs"
version = "0.1.1"
edition = "2021"
description = "WASI crypto file system"
authors = ["The Enarx Project Developers"]
homepage = "https://enarx.dev/"
repository = "https://github.com/enarx/vfs"
license = "Apache-2.0"
keywords = ["crypto", "vfs"]
categories = ["cryptography", "filesystem"]

[dependencies]
async-trait = { workspace = true }
digest = { workspace = true }
ecdsa = { workspace = true }
k256 = { workspace = true, features = ["ecdsa"] }
p256 = { workspace = true, features = ["ecdsa"] }
p384 = { workspace = true, features = ["ecdsa"] }
rand = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
signature = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
wasi-common = { workspace = true }
wasmtime-vfs-dir = { workspace = true }
wasmtime-vfs-file = { workspace = true }
wasmtime-vfs-ledger = { workspace = true }
wasmtime-vfs-memory = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
