[package]
name = "wasmtime-vfs-memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
wasi-common = { workspace = true }
wasmtime-vfs-ledger = { workspace = true }
